<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RightUpperArmAdjustment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/rightUAA_prompt"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/upperarm"
            android:padding="10dp" />

        <CheckBox
            android:id="@+id/rUpperArmCheckShoulder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpperArmCheckShoulder" />

        <CheckBox
            android:id="@+id/rUpperArmCheckAbducted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpperArmCheckAbducted" />

        <CheckBox
            android:id="@+id/rUpperArmCheckSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpperArmCheckSupport"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="backToRightUpperArmPosture"
                android:text="@string/back_button" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toRightLowerArmPosture"
                android:text="@string/next_button" />

        </LinearLayout>
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>